# ChangeLog for gnustep-libs/prefsmodule
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-libs/prefsmodule/ChangeLog,v 1.9 2006/03/25 19:55:39 grobian Exp $

  25 Mar 2006; Fabian Groffen <grobian@gentoo.org>
  -prefsmodule-1.1.1_pre20050110.ebuild,
  prefsmodule-1.1.1_pre20050315.ebuild:
  Removed old ebuild and ported latest to nongnu CVS server.  Version bump.

*prefsmodule-1.1.1_pre20050315 (17 Mar 2005)

  17 Mar 2005; Armando Di Cianno <fafhrd@gentoo.org>
  -prefsmodule-1.1.1_pre20041116.ebuild,
  +prefsmodule-1.1.1_pre20050315.ebuild:
  ebuild updates for GNUstep base, libs, and apps across the board; proper
  versions (to be stabilized, in due time) added where apropos, cvs-pull
  versions updated where needed

*prefsmodule-1.1.1_pre20050110 (12 Jan 2005)

  12 Jan 2005; Armando Di Cianno <fafhrd@gentoo.org>
  -prefsmodule-1.1.1_pre20040927.ebuild,
  +prefsmodule-1.1.1_pre20050110.ebuild:
  Version bump

*prefsmodule-1.1.1_pre20041116 (04 Dec 2004)

  04 Dec 2004; Armando Di Cianno <fafhrd@gentoo.org>
  +prefsmodule-1.1.1_pre20041116.ebuild:
  General version bump

  11 Nov 2004; Armando Di Cianno <fafhrd@gentoo.org>
  -prefsmodule-1.1.1_pre20040909.ebuild, prefsmodule-1.1.1_pre20040927.ebuild:
  Mass Update: gnustep.eclass revamped to allow configurable root install;
  gnustep-base/libs/apps updated to utilize new gnustep.eclass (only versions
  bumped where files would change); some KEYWORDS were accidentally dropped
  between version bumps of packages -- this has been resolved; windowmaker
  correctly supports gnustep now

  17 Oct 2004; David Holm <dholm@gentoo.org>
  prefsmodule-1.1.1_pre20040927.ebuild:
  Added to ~ppc.

*prefsmodule-1.1.1_pre20040927 (28 Sep 2004)

  28 Sep 2004; Armando Di Cianno <fafhrd@gentoo.org>
  +prefsmodule-1.1.1_pre20040927.ebuild:
  Version bump; pre release date specd live cvs pull.

*prefsmodule-1.1.1_pre20040909 (09 Sep 2004)
