@@ -1,6 +1,14 @@
 # ChangeLog for gnustep-libs/prefsmodule
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-libs/prefsmodule/ChangeLog,v 1.9 2006/03/25 19:55:39 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnustep-libs/prefsmodule/ChangeLog,v 1.10 2006/12/05 18:46:06 grobian Exp $
+
+*prefsmodule-1.1.1_pre20061204 (05 Dec 2006)
+
+  05 Dec 2006; Fabian Groffen <grobian@gentoo.org>
+  -prefsmodule-1.1.1_pre20050315.ebuild,
+  -prefsmodule-1.1.1_pre20060324.ebuild,
+  +prefsmodule-1.1.1_pre20061204.ebuild:
+  Bump and fix for bug #154155
 
   25 Mar 2006; Fabian Groffen <grobian@gentoo.org>
   -prefsmodule-1.1.1_pre20050110.ebuild,
